# myrobot_project

ws/install/: local_setup.sh  setup.sh
ws/install/robot_description/share/robot_description/: local_setup.sh  package.sh
ws/install/robot_description/share/robot_description/config/: display_robot_model.rviz
ws/install/robot_description/share/robot_description/launch/: display_robot.launch.py
ws/install/robot_description/share/robot_description/urdf/: common_inertial.xacro
ws/install/robot_description/share/robot_description/urdf/actuator/: wheel.urdf.xacro
ws/install/robot_description/share/robot_description/urdf/plugins/: gazebo_sensor_plugin.xacro
ws/install/robot_description/share/robot_description/urdf/sensor/: laser.urdf.xacro
ws/install/robot_description/share/robot_description/world/: custom_room.world
ws/install/robot_navigation2/lib/robot_navigation2/: explore.py
ws/install/robot_navigation2/share/robot_navigation2/: local_setup.sh  package.sh
ws/install/robot_navigation2/share/robot_navigation2/cmake/: robot_navigation2Config.cmake
ws/log/: latest_build
ws/src/robot_description/: CMakeLists.txt
ws/src/robot_description/config/: mybot_ros2_controller.yaml
ws/src/robot_description/launch/: gazebo_sim.launch.py
ws/src/robot_description/urdf/: base.urdf.xacro  mybot.ros2_control.xacro  mybot.urdf.xacro
ws/src/robot_description/urdf/actuator/: caster.urdf.xacro
ws/src/robot_description/urdf/sensor/: imu.urdf.xacro
ws/src/robot_navigation2/: CMakeLists.txt  package.xml
ws/src/robot_navigation2/config/: nav2_params.yaml
(+2 files in other folders)
